--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -19,7 +19,7 @@
 
     </div>
 
-    <div class="text-center p-3 text-white" style="background-color: #588cb3">
+    <div class="text-center p-3 text-white" style="background-color: #006dbd">
         ©2023 Clipartpress
     </div>
 </footer>
