--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,13 +14,13 @@
 }
 
 .navbar {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.868);
+    backdrop-filter: blur(5px);
 }
 
 .navbar .active {
     color: white !important;
-    background-color: #588cb3;
-    border-radius: 8px;
+    background-color: #006dbd;
     box-shadow: inset 0px 10px 15px rgba(0, 0, 0, 0.212);
 }
 
@@ -39,12 +39,19 @@
     border-radius: 8px;
 }
 
-.navbar .nav-link:hover {
+.navbar .nav-link::after {
+    transition: width .3s;
+    content: '';
+    display: block;
+    width: 0;
+    border-bottom: 4px solid #006dbd;
+}
+
+.navbar .nav-link:hover::after {
     transition: 0.2s;
-    color: white !important;
-    background-color: #588cb3;
-    border-radius: 8px;
-    box-shadow: inset 0px 10px 15px rgba(0, 0, 0, 0.341);
+    width: 100%;
+    /* background-color: #588cb3; */
+    /* box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.341); */
 }
 
 .nav-link:hover a {
@@ -53,7 +60,7 @@
 }
 
 .btn-primary {
-    background-color: #588cb3 !important;
+    background-color: #006dbd !important;
 }
 
 .mini-profile {
@@ -109,6 +116,11 @@
 .homed {
     text-align: center;
     padding: 5em;
+}
+
+.waves {
+    width: 100%;
+    position: absolute;
 }
 
 .wrap-home-content {
@@ -200,9 +212,59 @@ footer {
 }
 
 /* product */
+.banner {
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    color: white;
+}
+
+.banner-content {
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    top: 116px;
+    left: 0;
+    background: rgba(57, 57, 57, 0.5);
+    /* center overlay text */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .product-list {
     border: 1px solid rgb(199, 199, 199);
     padding: auto;
+}
+
+.cate-select-group {
+    background-color: white;
+    width: 300px;
+    height: 400px !important;
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    list-style: none;
+}
+
+.cate-button {
+    background-color: white;
+    width: 90%;
+    cursor: pointer;
+    padding: 5px;
+    margin: auto;
+    box-shadow: 0 0 10px #0000002f;
+    border-radius: 5px;
+}
+
+.cate-button:hover {
+    transition: 0.2s;
+    border-left: solid 5px #006dbd;
+}
+
+
+.cate-active {
+    border-left: solid 5px #006dbd;
 }
 
 .itemlist {
@@ -217,11 +279,11 @@ footer {
 .itemlist .card {
     width: 270px;
     height: 450px;
-    transition: 0.2s ease-in ;
+    transition: 0.2s ease-in;
 }
 
 .itemlist .card:hover {
-    transition: 0.1s ease-out ;
+    transition: 0.1s ease-out;
     border: 2px solid #37648678;
     border-radius: 0;
 }
@@ -239,10 +301,6 @@ footer {
     object-fit: cover;
     /* scale: 1;
     transition: 0.4s ease-in-out; */
-}
-
-.cate-button {
-    cursor: pointer;
 }
 
 /* #cardSection, #flyerSection, #leafletSection, #stickerSection, #billSection, #letterSection {
@@ -363,7 +421,7 @@ footer {
     padding: 10px;
 }
 
-.fa-circle-question:hover + .des-question {
+.fa-circle-question:hover+.des-question {
     display: inline;
     transition: 0.2s;
 }
@@ -374,9 +432,12 @@ footer {
     top: 0;
     position: fixed;
     display: block;
+    background-color: white;
     width: 300px;
     height: 100vh;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.239);
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .admin-navlink {
@@ -386,11 +447,19 @@ footer {
     align-self: center;
 }
 
+#mini-nav-btn {
+    cursor: pointer;
+}
+
+.mini-nav {
+    width: 100px !important;
+}
+
 .admin-navlink:hover {
     width: 100%;
     color: white;
-    background-color: #83a9c6;
-    border-right: solid 5px #d3eafc;
+    background-color: #006dbd;
+    border-right: solid 5px #2ea8ff;
     transition: 0.2s;
 }
 
@@ -411,7 +480,25 @@ footer {
     border-right: solid 5px #d3eafc;
 }
 
+.secondHead-admin {
+    position: absolute;
+    width: 100%;
+    height: 35vh;
+    background-color: #006dbd;
+    background: linear-gradient(90deg, rgba(0, 26, 45, 1) 0%, rgba(35, 133, 204, 1) 50%, rgba(0, 109, 189, 1) 100%);
+    padding: 2em;
+    color: white;
+    z-index: -1;
+}
+
+.secondHead-content {
+    margin-left: 300px;
+    padding: 3em;
+}
+
 /* ระบบแอดมิน */
+
+
 
 .box-admin {
     /* background-color: #5771bb; */
@@ -419,8 +506,10 @@ footer {
     padding: 2em 5em;
 }
 
+
 .product-picture {
     width: 30px;
+    height: 50px;
     overflow: hidden;
 }
 
@@ -432,7 +521,7 @@ footer {
     height: 160px;
 }
 
-.product-preview-upload .option-img .fa-plus{
+.product-preview-upload .option-img .fa-plus {
     margin: 1.5em 1em;
 }
 
@@ -554,7 +643,7 @@ footer {
 }
 
 .sub-option-row {
-    height: 250px;
+    height: 90px;
 }
 
 /* ตัวอย่างงาน */
@@ -596,7 +685,7 @@ footer {
 
 .user-box:hover {
     transition: 0.2s ease-in;
-    border-left: 5px solid #588cb3;
+    border-left: 5px solid #006dbd;
     background-color: rgb(244, 244, 244);
 }
 
@@ -692,7 +781,7 @@ footer {
     width: 80px;
     height: 80px;
     margin: 1em;
-    background-color: #588cb3;
+    background-color: #006dbd;
     border-radius: 100%;
     /* z-index: 10; */
     bottom: 0;
@@ -706,7 +795,7 @@ footer {
 }
 
 .chat-button:hover {
-    background-color: #376486;
+    background-color: rgb(39, 91, 130);
 }
 
 .chat-windows {
@@ -801,7 +890,8 @@ footer {
     /* margin: 10px; */
 }
 
-.dataTables_length, .dataTables_filter {
+.dataTables_length,
+.dataTables_filter {
     margin-bottom: 1em;
 }
 
@@ -812,4 +902,16 @@ footer {
 
 .dataTable tr {
     border: solid 1px #c1c1c1a7;
+}
+
+
+#product-btn .fa-caret-down {
+    position: absolute;
+    right: 0;
+    width: fit-content;
+    margin-right: 2em;
+}
+
+.rotate {
+    transform: rotate(180deg);
 }
