--- a/views/pages/admin/adminChat.ejs
+++ b/views/pages/admin/adminChat.ejs
@@ -1,6 +1,15 @@
 <%- include('../../partials/admin-nav') %>
 
-<body style="background-color: #FCFCFC !important;">
+<body class="h-100" style="background-color: rgb(248, 248, 248);">
+    <!-- <div class="mb-5 secondHead-admin">
+        <div class="secondHead-content">
+            <h1>ตัวเลือกสินค้า</h1>
+            <ol class="list-unstyled d-flex ">
+                <li class="breadcrumb-item"><a class="link-light" href="#">หน้าแรก</a></li>
+                <li class="active text-light ms-2">/ ตัวเลือกสินค้า</li>
+            </ol>
+        </div>
+    </div> -->
     <div class="d-flex justify-content-between" style="margin-left: 300px; padding-left: 5em;">
         <div class="chat-list pt-5 mt-5">
             <h1>แชท</h1>
