--- a/views/pages/admin/editproduct.ejs
+++ b/views/pages/admin/editproduct.ejs
@@ -1,8 +1,17 @@
 <%- include('../../partials/admin-nav') %>
 
 <body>
+    <div class="mb-5 secondHead-admin">
+        <div class="secondHead-content">
+            <h1>เพิ่มสินค้า</h1>
+            <ol class="list-unstyled d-flex ">
+                <li class="breadcrumb-item"><a class="link-light" href="#">หน้าแรก</a></li>
+                <li class="active text-light ms-2">/ สินค้า</li>
+            </ol>
+        </div>
+    </div>
+    <div style="padding-bottom: 150px;"></div>
     <div class="box-admin">
-        <h4>เพิ่มสินค้า</h4>
         <% if(success_msg != "") { %>
         <% success_msg.forEach((item) => { %>
         <div class="alert alert-success">
@@ -16,14 +25,6 @@
         </div>
         <% }); %>
         <% } %>
-        <div class="mb-5"
-            style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
-            aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Library</li>
-            </ol>
-        </div>
         <form action="/updateProduct/<%= product.product_id %>" method="post" enctype="multipart/form-data">
             <div class="card">
                 <div class="mx-4 mt-4 border-bottom">
@@ -36,15 +37,15 @@
                                 <i class="fa-solid fa-plus"></i>
                                 <input type="file" name="imgproduct" id="imgproduct" onchange="previewImage(event, [0])"
                                     accept="image/png, image/jpeg" multiple />
-                                <img src="<%= product.picture %>"
-                                    alt="" id="preview" draggable="false" class="img_option imageFitBox">
+                                <img src="<%= product.picture %>" alt="" id="preview" draggable="false"
+                                    class="img_option imageFitBox">
                             </div>
                         </div>
                         <div class="row w-100">
                             <div class="col p-0">
                                 <div class="form-outline">
-                                    <input type="text" id="product-name" class="form-control" name="product_name" value=" <%= product.productName %>"
-                                        required />
+                                    <input type="text" id="product-name" class="form-control" name="product_name"
+                                        value=" <%= product.productName %>" required />
                                     <label class="form-label" for="form6Example1">ชื่อสินค้า</label>
                                 </div>
                             </div>
@@ -55,7 +56,9 @@
                                     <% const values = ['card', 'flyer', 'leaflet', 'sticker', 'bill', 'letter']; %>
                                     <% const thai = ['นามบัตร', 'ใบปลิว', 'แผ่บพับ', 'สติ๊กเกอร์', 'ใบบิล', 'ซองจดหมาย']; %>
                                     <% for (let i = 0; i < values.length; i++) { %>
-                                        <option value="<%= values[i] %>" <%= product.categories === values[i] ? 'selected' : '' %>><%= thai[i] %></option>
+                                    <option value="<%= values[i] %>"
+                                        <%=  values[i] === product.categories ? 'selected' : '' %>"><%= thai[i] %>
+                                    </option>
                                     <% } %>
                                 </select>
                             </div>
@@ -68,21 +71,21 @@
                                 </select>
                             </div>
 
-                           <div class="w-100 ps-0 mt-2">
-                             <!-- Message input -->
-                             <div class="form-outline ">
-                                <textarea class="form-control" id="description" rows="4" name="product_description"
-                                    required> <%= product.description %></textarea>
-                                <label class="form-label" for="description">รายละเอียดสินค้า</label>
+                            <div class="w-100 ps-0 mt-2">
+                                <!-- Message input -->
+                                <div class="form-outline ">
+                                    <textarea class="form-control" id="description" rows="4" name="product_description"
+                                        required> <%= product.description %></textarea>
+                                    <label class="form-label" for="description">รายละเอียดสินค้า</label>
+                                </div>
                             </div>
-                           </div>
                         </div>
 
                     </div>
 
                 </div>
             </div>
-           
+
 
             <div class="card">
                 <div class="mx-4 mt-4 border-bottom">
@@ -105,10 +108,141 @@
                     </div>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary btn-block mt-5 float-end" style="width: 150px;">ยืนยัน</button>
+
+
+            <div class="card">
+                <div class="mx-4 mt-4 border-bottom">
+                    <h4>กำหนดราคาเหมาตามปริมาณ</h4>
+                </div>
+                <div class="card-body">
+                    <div class="row row-cols-auto mb-4">
+                        <div class="col d-flex">
+                            <input type="hidden" name="qtId[0][]" value="<%= priceTiers[0].qtTier_id %>">
+                            <div class="form-outline w-50 me-2">
+                                <input type="text" class="spec-name form-control" name="minqt[0][]"
+                                    value="<%= priceTiers[0].minqt %>" required>
+                                <label class="form-label">จาก</label>
+                            </div>
+                            <div class="form-outline w-50 me-2">
+                                <input type="text" class="spec-name form-control" name="maxqt[0][]"
+                                    value="<%= priceTiers[0].maxqt %>" required>
+                                <label class="form-label">ถึง</label>
+                            </div>
+                            <div class="form-outline w-50">
+                                <input type="text" class="spec-name form-control" name="priceTier[0][]"
+                                    value="<%= priceTiers[0].priceqt %>" required>
+                                <label class="form-label">ราคา</label>
+                            </div>
+                        </div>
+                        <button type="button" id="add-price" class="btn btn-secondary">
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
+                    </div>
+                    <div id="newPriceRow">
+                        <% for (let j = 1; j < priceTiers.length; j++) { %>
+                        <div class="row row-cols-auto mb-4 newPrice">
+                            <div class="col d-flex">
+                                <input type="hidden" name="qtId[<%= j %>][]" value="<%= priceTiers[j].qtTier_id %>">
+                                <div class="form-outline w-50 me-2">
+                                    <input type="text" class="spec-name form-control" name="minqt[<%= j %>][]"
+                                        value="<%= priceTiers[j].minqt %>" required>
+                                    <label class="form-label">จาก</label>
+                                </div>
+                                <div class="form-outline w-50 me-2">
+                                    <input type="text" class="spec-name form-control" name="maxqt[<%= j %>][]"
+                                        value="<%= priceTiers[j].maxqt %>" required>
+                                    <label class="form-label">ถึง</label>
+                                </div>
+                                <div class="form-outline w-50">
+                                    <input type="text" class="spec-name form-control" name="priceTier[<%= j %>][]"
+                                        value="<%= priceTiers[j].priceqt %>" required>
+                                    <label class="form-label">ราคา</label>
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-danger remove-price"><i class="fa-solid fa-trash"
+                                    style="color: #ffffff;"></i></button>
+                        </div>
+                        <% }; %>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="mx-4 mt-4 border-bottom">
+                    <h4>กำหนดราคาเหมาตามขนาด</h4>
+                </div>
+                <div class="card-body">
+                    <div class="row row-cols-auto mb-4">
+                        <div class="col d-flex">
+                            <input type="hidden" name="sizeId[0][]" value="<%= sizeTiers[0].sizeTier_id %>">
+                            <div class="form-outline w-50 me-2">
+                                <input type="text" class="spec-name form-control" name="minsize[0][]"
+                                    value="<%= sizeTiers[0].minSize %>" required>
+                                <label class="form-label">หน่วยขนาด</label>
+                            </div>
+                            <div class="form-outline w-50">
+                                <input type="text" class="spec-name form-control" name="priceSize[0][]"
+                                    value="<%= sizeTiers[0].pricesize %>" required>
+                                <label class="form-label">ราคา</label>
+                            </div>
+                        </div>
+                        <button type="button" id="add-size" class="btn btn-secondary">
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
+                    </div>
+                    <div id="newSizeRow">
+                        <% for (let i = 1; i < sizeTiers.length; i++) { %>
+                        <div class="row row-cols-auto mb-4 newSize">
+                            <div class="col d-flex">
+                                <input type="hidden" name="sizeId[<%= i %>][]" value="<%= sizeTiers[i].sizeTier_id %>">
+                                <div class="form-outline w-50 me-2">
+                                    <input type="text" class="spec-name form-control" name="minsize[<%= i %>][]"
+                                        value="<%= sizeTiers[i].minSize %>" required>
+                                    <label class="form-label">หน่วยขนาด</label>
+                                </div>
+                                <div class="form-outline w-50">
+                                    <input type="text" class="spec-name form-control" name="priceSize[<%= i %>][]"
+                                        value="<%= sizeTiers[i].pricesize %>" required>
+                                    <label class="form-label">ราคา</label>
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-danger" data-mdb-toggle="modal" data-mdb-target="#deleteModal"
+                            data-id="<%= sizeTiers[i].sizeTier_id %>"><i class="fa-solid fa-trash"
+                                    style="color: #ffffff;"></i></button>
+                        </div>
+
+                        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="editModalLabel">ลบประเภท</h5>
+                                    <button type="button" class="btn-close" data-mdb-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <!-- <form action="/deleteSize" id="editForm" method="post"> -->
+                                        <div>
+                                            <p>ต้องการลบใช่หรือไม่ ?</p>
+                                        </div>
+                                        <input type="hidden" id="id" name="option_id" value="" />
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary "
+                                                data-mdb-dismiss="modal">ยกเลิก</button>
+                                            <button type="button" class="btn btn-danger remove-size">ยืนยัน</button>
+                                        </div>
+                                    <!-- </form> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                        <% }; %>
+                    </div>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block my-3 mb-5 float-end" style="width: 150px;">ยืนยัน</button>
         </form>
     </div>
-
     <script>
         // $('.option-checkbox').multipleSelect({
         //     filter: true,
@@ -134,9 +268,70 @@
                 imgPreview.src = "";
             }
         }
-        var quantityCount = 0;
         var specCount = 0;
         var img = 0
+        let quantityCount = -1;
+        let sizeCount = -1;
+
+        $('#add-price').on('click', function () {
+            quantityCount++
+            var newPriceRow = `
+            <div class="row row-cols-auto mb-4 newPrice">
+                        <div class="col d-flex">
+                            <div class="form-outline w-50 me-2">
+                                <input type="text" class="spec-name form-control" name="newminqt[${quantityCount}][]" required>
+                                <label class="form-label">จาก</label>
+                            </div>
+                            <div class="form-outline w-50 me-2">
+                                <input type="text" class="spec-name form-control" name="newmaxqt[${quantityCount}][]" required>
+                                <label class="form-label">ถึง</label>
+                            </div>
+                            <div class="form-outline w-50">
+                                <input type="text" class="spec-name form-control" name="newpriceTier[${quantityCount}][]" required>
+                                <label class="form-label">ราคา</label>
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-danger remove-price"><i class="fa-solid fa-trash" style="color: #ffffff;"></i></button>
+                    </div>
+          `;
+
+            $('#newPriceRow').append(newPriceRow);
+            document.querySelectorAll('.form-outline').forEach((formOutline) => {
+                new mdb.Input(formOutline).init();
+            });
+        })
+
+        $('#add-size').on('click', function () {
+            sizeCount++
+            var newrow = `
+            <div class="row row-cols-auto mb-4 newSize">
+                        <div class="col d-flex">
+                            <div class="form-outline w-50 me-2">
+                                <input type="text" class="form-control" name="newminsize[${sizeCount}][]" required>
+                                <label class="form-label">หน่วยขนาด</label>
+                            </div>
+                            <div class="form-outline w-50">
+                                <input type="text" class="form-control" name="newpriceSize[${sizeCount}][]" required>
+                                <label class="form-label">ราคา</label>
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-danger remove-size"><i class="fa-solid fa-trash" style="color: #ffffff;"></i></button>
+                    </div>
+          `;
+
+            $('#newSizeRow').append(newrow);
+            document.querySelectorAll('.form-outline').forEach((formOutline) => {
+                new mdb.Input(formOutline).init();
+            });
+        })
+
+        $('#newPriceRow').on('click', '.remove-price', function () {
+            $(this).closest(`.newPrice`).remove();
+        });
+
+        $('#newSizeRow').on('click', '.remove-size', function () {
+            $(this).closest(`.newSize`).remove();
+        });
     </script>
 
 </body>
