--- a/views/pages/admin/member.ejs
+++ b/views/pages/admin/member.ejs
@@ -1,16 +1,17 @@
 <%- include('../../partials/admin-nav') %>
 
-<body>
-    <div class="box-admin">
-        <h2>สมาชิก</h2>
-        <div class="mb-5"
-            style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
-            aria-label="breadcrumb">
-            <!-- <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Library</li>
-            </ol> -->
+<body class="h-100" style="background-color: rgb(248, 248, 248);">
+    <div class="mb-5 secondHead-admin">
+        <div class="secondHead-content">
+            <h1>ตัวเลือกสินค้า</h1>
+            <ol class="list-unstyled d-flex ">
+                <li class="breadcrumb-item"><a class="link-light" href="#">หน้าแรก</a></li>
+                <li class="active text-light ms-2">/ ตัวเลือกสินค้า</li>
+            </ol>
         </div>
+    </div>
+    <div style="padding-bottom: 150px;"></div>
+    <div class="box-admin">
         <% if(success_msg != "") { %>
         <% success_msg.forEach((item) => { %>
         <div class="alert alert-success">
@@ -79,7 +80,7 @@
                                 ยืนยันอีเมลแล้ว
                                 <% } %></td>
                             <td>
-                                <button type="button" class="btn btn-link btn-sm btn-rounded btn-edit delete"
+                                <button type="button" class="btn btn-danger btn-edit delete"
                                     data-mdb-toggle="modal" data-mdb-target="#deleteModal"
                                     data-user-id="<%= users.user_id %>">
                                     ลบ
