--- a/views/pages/admin/product-list.ejs
+++ b/views/pages/admin/product-list.ejs
@@ -1,16 +1,17 @@
 <%- include('../../partials/admin-nav') %>
 
-<body>
-    <div class="box-admin">
-        <p>สินค้า</p>
-        <div class="mb-5"
-            style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
-            aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Library</li>
+<body class="h-100" style="background-color: rgb(248, 248, 248);">
+    <div class="mb-5 secondHead-admin">
+        <div class="secondHead-content">
+            <h1>สินค้า</h1>
+            <ol class="list-unstyled d-flex ">
+                <li class="breadcrumb-item"><a class="link-light" href="#">หน้าแรก</a></li>
+                <li class="active text-light ms-2">/ สินค้า</li>
             </ol>
         </div>
+    </div>
+    <div style="padding-bottom: 150px;"></div>
+    <div class="box-admin">
         <% if(success_msg != "") { %>
         <% success_msg.forEach((item) => { %>
         <div class="alert alert-success">
@@ -30,8 +31,6 @@
                 เพิ่มสินค้า
             </button>
         </a>
-
-
         <div class="card" style="width: 100%; margin: auto;">
             <div class="card-body">
                 <table class="table align-middle mb-0 bg-white" id="table">
@@ -74,11 +73,11 @@
                             <td>
 
                                 <a href="/admin/product/edit/<%= product.product_id %>">
-                                    <div class="btn btn-link btn-sm btn-rounded btn-edit">
+                                    <div class="btn btn-warning btn-sm btn-edit">
                                         แก้ไข
                                     </div>
                                 </a>
-                                <button type="button" class="btn btn-link btn-sm btn-rounded btn-edit delete"
+                                <button type="button" class="btn btn-danger btn-sm delete"
                                     data-mdb-toggle="modal" data-mdb-target="#deleteModal"
                                     data-product-id="<%= product.product_id %>">
                                     ลบ
@@ -97,7 +96,7 @@
                                     <div class="modal-body">
                                         <form action="/deleteProduct" method="post">
                                             <div>
-                                                <p>ต้องการลบประเภทใช่หรือไม่ ?</p>
+                                                <p>ต้องการลบสินค้าใช่หรือไม่ ?</p>
                                             </div>
                                             <input type="hidden" id="id" name="product_id" value="" />
                                             <div class="modal-footer">
