--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= Title %></title>
+  <link rel="icon" type="image/png" href="/assets/img/logo.png"/>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/animation.css">
   <link rel="stylesheet" href="/css/editor.css">
