--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,16 +2,16 @@
 
 
 <!-- Navbar -->
-<div class="navtoptap" style="z-index: 10;">
+<!-- <div class="navtoptap" style="z-index: 10;">
   <div class="text-end flag-lang container-lg d-flex justify-content-end">
     <p class="line pe-4">Line : <a href="#" class="link-light">0800000000</a></p>
     <i class="flag flag-thailand align-self-center"></i>
     <i class="flag flag-united-states align-self-center"></i>
   </div>
-</div>
+</div> -->
 <nav class="navbar navbar-expand-lg sticky-top">
   <!-- Container wrapper -->
-  <div class="container-lg">
+  <div class="container-fluid ">
     <!-- Toggle button -->
     <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,17 +19,17 @@
     </button>
 
     <!-- Collapsible wrapper -->
-    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!-- Navbar brand -->
       <a class="navbar-brand" href="/">
         <img src="/assets/img/logo.png" alt="clipartpress" width="100">
       </a>
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item me-2">
+        <li class="nav-item me-2 mt-2">
           <a class="nav-link <%= currentMenu == 'หน้าแรก' ? 'active' : ''%>" aria-current="page" href="/">หน้าแรก</a>
         </li>
-        <li class="nav-item me-2 dropdown ">
+        <li class="nav-item me-2 mt-2 dropdown ">
           <a class="nav-link <%= currentMenu == 'สินค้า' ? 'active' : ''%>" href="/product/all"><span class="">สินค้า</span></a>
           <!-- <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <li><a class="dropdown-item" href="#">Action</a></li>
@@ -38,42 +38,50 @@
           </ul> -->
         </li>
 
-        <li class="nav-item me-2">
+        <li class="nav-item me-2 mt-2">
           <a class="nav-link" href="#">รายการที่สั่ง</a>
         </li>
-        <li class="nav-item me-2">
+        <li class="nav-item me-2 mt-2">
           <a class="nav-link" href="/example">ตัวอย่างงาน</a>
         </li>
-        <li class="nav-item me-2">
+        <li class="nav-item me-2 mt-2">
           <a class="nav-link" href="#">รีวิวลูกค้า</a>
         </li>
-        <li class="nav-item me-2">
+        <li class="nav-item me-2 mt-2">
           <a class="nav-link" href="/contact">ติดต่อเรา</a>
         </li>
       </ul>
 
       <% if(!login){ %>
-      <ul class="navbar-nav nav-item-usermenu">
+      <ul class="navbar-nav ">
         <li class="nav-item me-5 mt-2">
-          <a class="text-reset me-1" href="/cart">
-            <i class="fas fa-shopping-cart"></i>
+          <a class="nav-link" href="/cart">
+            <!-- <span class="badge badge-pill bg-danger">1</span> -->
+            <span><i class="fas fa-shopping-cart"></i></span>
           </a>
         </li>
-        <li class="nav-item d-flex me-2">
-          <a class="fas fa-sign-in-alt align-self-center link-dark"></a>
-          <a class="nav-link" aria-current="page" href="/login">เข้าสู่ระบบ</a>
+        <li class="nav-item me-2 mt-2">
+          <a class="nav-link" aria-current="page" href="/login">
+            <i class="fas fa-arrow-right-to-bracket align-self-center"></i>
+            <span>เข้าสู่ระบบ</span>
+          </a>
         </li>
-        <li class="nav-item d-flex">
-          <a class="fas fa-user-plus align-self-center link-dark"></a>
-          <a class="nav-link" href="/register">สมัครสมาชิก</a>
+        <li class="nav-item mt-2">
+          <a class="nav-link" href="/register">
+            <i class="fas fa-user-plus align-self-center "></i>
+            <span>สมัครสมาชิก</span>
+          </a>
         </li>
       </ul>
       <% } else if(login === true) { %>
-      <div class="d-flex align-items-center">
-        <a class="text-reset me-3" href="/cart">
-          <i class="fas fa-shopping-cart"></i>
-        </a>
-        <div class="dropdown ms-4">
+      <ul class="navbar-nav">
+        <li class="nav-item me-5 mt-2">
+          <a class="nav-link" href="#">
+            <!-- <span class="badge badge-pill bg-danger">1</span> -->
+            <span><i class="fas fa-shopping-cart"></i></span>
+          </a>
+        </li>
+        <li class="dropdown nav-item me-5 m-auto">
           <a class="dropdown-toggle d-flex align-items-center hidden-arrow mini-profile" href="#"
             id="navbarDropdownMenuAvatar" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
             <img src="<%= session.picture %>" alt="profile" loading="lazy" />
@@ -86,8 +94,8 @@
               <a class="dropdown-item" href="/logout">ออกจากระบบ</a>
             </li>
           </ul>
-        </div>
-      </div>
+        </li>
+      </ul>
       <% } %>
     </div>
     <!-- Collapsible wrapper -->
